# tiny-sfml

./: CMakeLists.txt  README.md
include/: Context.hpp  tinysfml.hpp
src/: Context.cpp  main.cpp
src/tinysfml/: draw.cpp  init.cpp  run.cpp  transform.cpp
